Fix alignment of number inputs

--- a/web/htdocs/check_mk.css
+++ b/web/htdocs/check_mk.css
@@ -72,6 +72,10 @@ button, input, td, th, select, textarea {
     font-size: 9pt;
 }
 
+input.number {
+    text-align: right;
+}
+
 /* Styling for input elements */
 input, select, textarea {
     padding: 3px;
